// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CyclingVideo > matches snapshot 1`] = `
<div>
  <video
    autoplay=""
  >
    <source
      src="1"
      type="video/mp4"
    />
  </video>
</div>
`;

exports[`CyclingVideo > passes unrecognized props 1`] = `
<div>
  <video
    autoplay=""
    style="color: red;"
  >
    <source
      src="1"
      type="video/mp4"
    />
  </video>
</div>
`;
